# postal

./: main.py  pyproject.toml
src/postal/: cpost.py  poster.py
tests/: test_cpost_parsers.py
